--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,25 @@
         <module>spring-rabbitmq-producer</module>
         <module>spring-rabbitmq-consumer</module>
         <module>spring-rabbitmq-producer-two</module>
+        <module>spring-temporary</module>
+        <module>springboot-rabbitmq</module>
+        <module>springboot-rabbitmq-consumer</module>
     </modules>
-
+    <!--dependencyManagement  spring-boot-dependencies 对spring-boot系列依赖进行统一管理-->
+    <dependencyManagement>
+        <dependencies>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-dependencies</artifactId>
+                <version>2.2.6.RELEASE</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter</artifactId>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
 
 </project>
