--- a/spring-rabbitmq-producer/src/main/resources/application.yml
+++ b/spring-rabbitmq-producer/src/main/resources/application.yml
@@ -1,11 +1,14 @@
 server:
   port: 8081
+  servlet:
+    context-path: /rabbit/producer
 
 spring:
   rabbitmq:
     addresses: 127.0.0.1
     username: guest
     password: guest
+    port: 5672
     connection-timeout: 10000
     virtual-host: /
     template:
